8th batch of UI changes

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -10,7 +10,7 @@
     "OK" : "تم",
     "ok":"تم",
     "google_map" : "خرائط كوكل",
-    "Or": " او ",
+    "Or": " أو ",
     "":"",
 
 "regions":"---------------------------------",
@@ -68,7 +68,7 @@
     "does_not_have_account" : "لم تسجل في التطبيق سابقا؟",
     "does_have_account" : "لديك حساب سابق؟",
     "doctor_form" : "معلومات الطبيب",
-    "name" : "الاسم",
+    "name" : "الاسم الثلاثي باللغه العربيه",
     "name_validator" : "ادخل اسمك الثلاثي",
     "speciality" : "الاختصاص",
     "speciality_validator" : "اختر اختصاصك الطبي",
