changing windows app

--- a/lang/en.json
+++ b/lang/en.json
@@ -105,7 +105,7 @@
     "passWord_reset":"Password Reset",
     "password_reset_email":"Send Email To Reset Password",
     "check_reset_email":"Check your Email and click on the link to Reset your Password",
-    "open_time":"Doctor Is Available From ",
+    "open_time":"Doctor is available from ",
     
 
 
