minor ui changes

--- a/lang/en.json
+++ b/lang/en.json
@@ -154,7 +154,7 @@
     "auto_location" : "Auto Device Location",
     "speciality_result" : "Medical Speciality",
     "your_location" : "Your Location",
-    "region" : "Iraqi Region",
+    "region" : "your region in Iraqi",
     "select_region" : "Select Your Region",
     "northen_region" : "Northen Region of Iraq",
     "southern_region" : "Southern Region of Iraq",
