--- a/lang/ar.json
+++ b/lang/ar.json
@@ -83,7 +83,7 @@
     "clinic_form" : "معلومات العياده",
     "profile" : "الملف الشخصي",
     "update_info" : "تحديث المعلومات",
-    "update_password" : "تحديث الرقم السري",
+    "update_password" : "تحديث كلمة المرور",
     "current_password" : "ادخل كلمة المرور الحالية",
     "old_password" : "كلمة المرور القديمة",
     "new_password" : "كلمة المرور الجديدة",
