--- a/lang/ar.json
+++ b/lang/ar.json
@@ -20,6 +20,22 @@
     "Western Region":"المنطقة الغربية في العراق",
     "Middle Region":"المنطقة الوسطى في العراق",
 
+"weekdays" : "----------------------------",
+    "sun" : "ح",
+    "mon" : "ن",
+    "tue" : "ث",
+    "wed" : "ر",
+    "thu" : "خ",
+    "fri" : "ج",
+    "sat" : "س",
+    "sunday" : "الاحد",
+    "monday" : "الاثنين",
+    "tuesday" : "الثلاثاء",
+    "wednesday" : "الاربعاء",
+    "thursday" : "الخميس",
+    "friday" : "الجمعه",
+    "saturday" : "السبت",
+
 
 "email verification page":"=========================",
     "email_v_title":"تاكيد البريد الالكتروني", 
@@ -96,7 +112,7 @@
     "vacation":" عطلة العيادة في يوم",
     "detailed_address":"عنوان العيادة كاملا",
     "address_validator":"الرجاء ادخال عنوان مناسب",
-    "vacation_days":"ايام عطلة العيادة",
+    "work_days":"ايام دوام العيادة",
     "vacation_validator":"لطفا حدد ايام عطلة العيادة",
     "work_hour":"اوقات عمل العيادة",
     "work_validator":"حدد اوقات عمل العيادة لطفا",
