--- a/lang/ar.json
+++ b/lang/ar.json
@@ -198,8 +198,8 @@
     "skeleton_muscles" : "الهيكل العظمي والعضلات",
     "head_neck_back" : "الرأس, الرقبه, الظهر",
     "psychology" : "الحاله النفسيه",
-    "upper_limb" : "الطرف العلوي",
-    "lower_limb" : "الطرف السفلي",
+    "upper_limb" : "الطرف الاعلى",
+    "lower_limb" : "الطرف الاسفل",
     "Hand" : "اليدين",
     "other_symptoms" : "اعراض اخرى",
     "bpPrLab" : "الفعاليات الحيويه والتحاليل المختبريه",
@@ -209,12 +209,12 @@
     "throat" : "الحنجره",
     "nose" : "الانف",
     "ear" : "الاذن",
-    "skin" : "مشاكل الجلد",
+    "skin" : "الامراض الجلدية",
     "gynecology" : "نسائيه وتوليد",
     "uro" : "المجاري البوليه",
-    "male_genital" : "مشاكل المجرى التناسلي الذكري",
-    "eye" : "مشاكل العين",
-    "Breast" : "مشاكل الثدي",
+    "male_genital" : "امراض المجرى التناسلي الذكري",
+    "eye" : "امراض العين",
+    "Breast" : "امراض الثدي",
 
 
 
@@ -308,7 +308,7 @@
     "phobia":"الخوف(من الاشياء غير المخيفة)",
     "suicide":"محاولة الانتحار",
     "obsession":"الهوس|الوسواس",
-    "attention deficit":"نقص النتباه",
+    "attention deficit":"نقص الانتباه",
     "hyperactivity":"زيادة الحركة",
     "stress":"الشد العصبي",
     "psychological trauma":"ازمات نفسية",
@@ -496,15 +496,15 @@
     "other penile problems":"مشاكل اخرى",
     "scrotal pain":"الم الخصية",
     "priapism":"الانتصاب اكثر من 6 ساعات",
-    "impotence":"عذم الانتصاب",
+    "impotence":"عدم الانتصاب",
     "hematospermia":"وجود الدم في السائل المنوي",
 
 "ophtha" : "=========================================",
-    "open eye":"عدم القدرة على غلق العين",
-    "blindness":"العمى",
+    "open eye":"عدم القدرة على تحريك الجفن للاسفل",
+    "blindness":"العمى الحاد",
     "photophobia":"الخوف او الانزعاج من الضوء",
     "double vision":"الرؤيا المزدوجة",
-    "lid drop":"عدم القدرة على فتح العين",
+    "lid drop":"عدم القدرة على تحريك الجفن للاعلى",
     "blurred vision":"تشوش الرؤيا",
     "squint":"الحول",
     "eye redness":"احمرار العين",
