Snackbar Font Uniform

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -72,7 +72,7 @@
     "home_patient_title" :"انا مريض\n",
     "home_patient_subtitle" :"اريد البحث عن طبيب",
     "home_doctor_title" : "انا طبيب\n",
-    "home_doctor_subtitle" : "اريد التسجيل",
+    "home_doctor_subtitle" : "اريد التسجيل في التطبيق",
     "about_us" : "من نحن",
     "sign_in": "الدخول",
     "register" : "التسجيل",
