--- a/lang/en.json
+++ b/lang/en.json
@@ -88,7 +88,7 @@
     "does_not_have_account" : "Does not have account?",
     "does_have_account" : "Already have an account?",
     "doctor_form" : "Doctor Form",
-    "name" : "Name in Arabic",
+    "name" : "Full Name in Arabic",
     "name_validator" : "Enter Your Name in Arabic",
     "speciality" : "Speciality",
     "speciality_validator" : "Choose Your Speciality",
