TimePicker en, ar

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -35,6 +35,8 @@
     "thursday" : "الخميس",
     "friday" : "الجمعه",
     "saturday" : "السبت",
+    "from" : "من ",
+    "to" : "الى ",
 
 
 "email verification page":"=========================",
@@ -72,7 +74,7 @@
     "home_patient_title" :"انا مريض\n",
     "home_patient_subtitle" :"اريد البحث عن طبيب",
     "home_doctor_title" : "انا طبيب\n",
-    "home_doctor_subtitle" : "اريد التسجيل في التطبيق",
+    "home_doctor_subtitle" : "اريد التسجيل بالتطبيق",
     "about_us" : "من نحن",
     "sign_in": "الدخول",
     "register" : "التسجيل",
