adding exception days to booking hours

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -112,6 +112,7 @@
     "change_password" : "هل تريد تغيير كلمة المرور؟",
     "change" : "تغيير",
     "vacation":" عطلة العيادة في يوم",
+    "address" : "العنوان باللغه العربيه",
     "detailed_address":"عنوان العيادة كاملا",
     "address_validator":"الرجاء ادخال عنوان مناسب",
     "work_days":"ايام دوام العيادة",
@@ -123,6 +124,10 @@
     "password_reset_email":"ارسال بريد الكتروني لاعادة التعيين",
     "check_reset_email":"تحقق من بريدك الالكتروني ثم اضغط على الرابط المرسل لاعادة تعيين كلمة المرور",
     "open_time":"وقت تواجد الطبيب ",
+    "expcetion_days" : "حدد ايام بأوقات اخرى",
+    "select_days" : "اختر اليوم",
+
+
     
 
 
