added another exception days

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -53,6 +53,8 @@
     "distances":"البعد عن الطبيب هو تقريبا",
     "km":"كيلومتر",
     "doctor_locat":"اظهار موقع الطبيب",
+    "age_gender" : "العمر و الجنس",
+
 
 
 "Snacks" : "=======================================",
