--- a/lang/en.json
+++ b/lang/en.json
@@ -181,7 +181,7 @@
     "auto_location" : "Auto Device Location",
     "speciality_result" : "Medical Speciality",
     "your_location" : "Your Location",
-    "region" : "your region in Iraqi",
+    "region" : "Location",
     "select_region" : "Select Your Region",
     "northen_region" : "Northen Region of Iraq",
     "southern_region" : "Southern Region of Iraq",
