symtoms capitalization, FocusScopeNode

--- a/lang/en.json
+++ b/lang/en.json
@@ -256,141 +256,140 @@
     "family" : "Family History of the Same Disease",
 
     "cardioresp" : "=========================================",
-    "hemoptysis":"hemoptysis",
-    "orthopnea":"orthopnea",
+    "hemoptysis":"Hemoptysis",
+    "orthopnea":"Orthopnea",
     "PN dyspnea":"PN dyspnea",
-    "palpitation":"palpitation",
-    "chest pain":"chest pain",
-    "cough":"cough",
-    "sputum":"sputum",
-    "dyspnea":"dyspnea",
-    "cyanosis":"cyanosis",
-    "other cardiac problems":"other cardiac problems",
-    "wheeze":"wheeze",
-    "other respiratory problems":"other respiratory problems",
+    "palpitation":"Palpitation",
+    "chest pain":"Chest pain",
+    "cough":"Cough",
+    "sputum":"Sputum",
+    "dyspnea":"Dyspnea",
+    "cyanosis":"Cyanosis",
+    "other cardiac problems":"Other cardiac problems",
+    "wheeze":"Wheeze",
+    "other respiratory problems":"Other respiratory problems",
 
  "GIT and abdomen" : "=========================================",
-    "abdominal pain":"abdominal pain",
-    "vomiting":"vomiting",
-    "constipation":"constipation",
-    "bloody diarrhea":"bloody diarrhea",
-    "watery diarrhea":"watery diarrhea",
-    "dysphagia":"dysphagia",
-    "odynophagia":"odynophagia",
-    "mucousy diarrhea":"mucousy diarrhea",
-    "tenesmus":"tenesmus",
-    "other git problems":"other GIT problems",
-    "abdominal distension":"abdominal distension",
-    "bleeding per rectum":"bleeding per rectum",
-    "nausea":"nausea",
-    "hematemesis":"hematemesis",
-    "malena":"malena",
+    "abdominal pain":"Abdominal pain",
+    "vomiting":"Vomiting",
+    "constipation":"Vonstipation",
+    "bloody diarrhea":"Vloody diarrhea",
+    "watery diarrhea":"Watery diarrhea",
+    "dysphagia":"Dysphagia",
+    "odynophagia":"Odynophagia",
+    "mucousy diarrhea":"Mucousy diarrhea",
+    "tenesmus":"Tenesmus",
+    "other git problems":"Other GIT problems",
+    "abdominal distension":"Abdominal distension",
+    "bleeding per rectum":"Bleeding per rectum",
+    "nausea":"Nausea",
+    "hematemesis":"Hematemesis",
+    "malena":"Malena",
 
 "peiranal/abdomen" : "=========================================",
-    "perianal pain":"perianal pain",
-    "perianal discharge":"perianal discharge",
-    "perianal itching":"perianal itching",
-    "anal incontinence":"anal incontinence",
-    "abdominal wall swelling":"abdominal wall swelling",
+    "perianal pain":"Perianal pain",
+    "perianal discharge":"Perianal discharge",
+    "perianal itching":"Perianal itching",
+    "anal incontinence":"Anal incontinence",
+    "abdominal wall swelling":"Abdominal wall swelling",
 
 "Neuro" : "=========================================",
-    "coma":"coma",
-    "tremer":"tremer",
-    "fit":"fit",
-    "abnormal movement":"abnormal movement",
-    "spasm":"spasm",
-    "memory loss":"memory loss",
-    "confusion":"confusion",
-    "numbness":"numbness",
-    "slurred speech":"slurred speech",
-    "ataxia":"ataxia",
-    "weakness":"weakness",
-    "other neurological problems":"other neurological problems",
-    "syncope":"syncope",
+    "coma":"Coma",
+    "tremer":"Tremer",
+    "fit":"Fit",
+    "abnormal movement":"Abnormal movement",
+    "spasm":"Spasm",
+    "memory loss":"Memory loss",
+    "confusion":"Confusion",
+    "numbness":"Numbness",
+    "slurred speech":"Slurred speech",
+    "ataxia":"Ataxia",
+    "weakness":"Weakness",
+    "other neurological problems":"Other neurological problems",
+    "syncope":"Syncope",
 
 "Psycho" : "=========================================",
-    "cognitive impairment":"cognitive impairment",
-    "behavioral impairement":"behavioral impairement",
-    "depression":"depression",
-    "hallucination/delusion":"hallucination/delusion",
-    "phobia":"phobia",
-    "suicide":"suicide",
-    "obsession":"obsession",
-    "attention deficit":"attention deficit",
-    "hyperactivity":"hyperactivity",
-    "stress":"stress",
-    "psychological trauma":"psychological trauma",
-    "addiction":"addiction",
-    "encorporesis":"encorporesis",
-    
-    "other psychological problems":"other psychological problems",
+    "cognitive impairment":"Cognitive impairment",
+    "behavioral impairement":"Behavioral impairement",
+    "depression":"Depression",
+    "hallucination/delusion":"Hallucination/delusion",
+    "phobia":"Phobia",
+    "suicide":"Suicide",
+    "obsession":"Obsession",
+    "attention deficit":"Attention deficit",
+    "hyperactivity":"Hyperactivity",
+    "stress":"Stress",
+    "psychological trauma":"Psychological trauma",
+    "addiction":"Addiction",
+    "encorporesis":"Encorporesis",
+    "other psychological problems":"Other psychological problems",
 
 
 "musckuloskeletal" : "=========================================",
-    "generalized bone pain":"generalized bone pain",
-    "joint pain":"joint pain",
-    "deformity":"deformity",
-    "joint swelling":"joint swelling",
-    "limitation of movement":"limitation of movement",
-    "fracture":"fracture",
-    "limb pain":"limb pain",
-    "dislocation":"dislocation",
-    "other msk problems":"other msk problems",
+    "generalized bone pain":"Generalized bone pain",
+    "joint pain":"Joint pain",
+    "deformity":"Deformity",
+    "joint swelling":"Joint swelling",
+    "limitation of movement":"Limitation of movement",
+    "fracture":"Fracture",
+    "limb pain":"Limb pain",
+    "dislocation":"Dislocation",
+    "other msk problems":"Other msk problems",
 
 "head/neck/back" : "=========================================",
-    "jaw pain":"jaw pain",
-    "neck pain":"neck pain",
-    "enlarged jaw":"enlarged jaw",
-    "neck swelling":"neck swelling",
-    "back opening":"back opening",
-    "back mass":"back mass",
-    "back pain":"back pain",
-    "headache":"headache",
-    "large head":"large head",
-    "abnormal head shape":"abnormal head shape",
-    "other skull problems":"other skull problems",
+    "jaw pain":"Jaw pain",
+    "neck pain":"Neck pain",
+    "enlarged jaw":"Enlarged jaw",
+    "neck swelling":"Neck swelling",
+    "back opening":"Back opening",
+    "back mass":"Back mass",
+    "back pain":"Back pain",
+    "headache":"Headache",
+    "large head":"Large head",
+    "abnormal head shape":"Abnormal head shape",
+    "other skull problems":"Other skull problems",
 
 "upperlimb" : "=========================================",
-    "left arm pain":"left arm pain",
-    "left shoulder pain":"left shoulder pain",
+    "left arm pain":"Left arm pain",
+    "left shoulder pain":"Left shoulder pain",
 
 
 "hand" : "=========================================",
-    "enlarged hand":"enlarged hand",
-    "extra digit":"extra digit",
-    "joined digit":"joined digit",
-    "loss digit":"loss digit",
-    "hand deformity":"hand deformity",
-    "other hand problems":"other hand problems",
-    "hand swelling":"hand swelling",
-    "hand lump":"hand lump",
+    "enlarged hand":"Enlarged hand",
+    "extra digit":"Extra digit",
+    "joined digit":"Joined digit",
+    "loss digit":"Loss digit",
+    "hand deformity":"Hand deformity",
+    "other hand problems":"Other hand problems",
+    "hand swelling":"Hand swelling",
+    "hand lump":"Hand lump",
 
 "lowerlimb" : "=========================================",
-    "bilateral leg edema":"bilateral leg edema",
-    "enlarged foot":"enlarged foot",
-    "unilateral leg swelling":"unilateral leg swelling",
-    "unilateral leg pain" : "unilateral leg pain",
-    "leg pain during walking":"leg pain during walking",
-    "foot ulcer":"foot ulcer",
+    "bilateral leg edema":"Bilateral leg edema",
+    "enlarged foot":"Enlarged foot",
+    "unilateral leg swelling":"Unilateral leg swelling",
+    "unilateral leg pain" : "Unilateral leg pain",
+    "leg pain during walking":"Leg pain during walking",
+    "foot ulcer":"Foot ulcer",
 
 
 "others" : "=========================================",
-    "sweating":"sweating",
-    "fever":"fever",
-    "heat sensation":"heat sensation",
-    "ulcer":"ulcer",
-    "insomnia":"insomnia",
-    "cold sensation":"cold sensation",
-    "somnolence":"somnolence",
-    "polydipsia":"polydipsia",
-    "bleeding":"bleeding ",
-    "fatigue":"fatigue",
-    "pallor":"pallor",
-    "lump":"lump",
-    "other health problems":"other health problems",
-    "malaise":"malaise",
-    "short stature":"short stature",
-    "taste loss":"taste loss",
+    "sweating":"Sweating",
+    "fever":"Fever",
+    "heat sensation":"Heat sensation",
+    "ulcer":"Ulcer",
+    "insomnia":"Insomnia",
+    "cold sensation":"Cold sensation",
+    "somnolence":"Somnolence",
+    "polydipsia":"Polydipsia",
+    "bleeding":"Bleeding ",
+    "fatigue":"Fatigue",
+    "pallor":"Pallor",
+    "lump":"Lump",
+    "other health problems":"Other health problems",
+    "malaise":"Malaise",
+    "short stature":"Short stature",
+    "taste loss":"Taste loss",
 
 
 "bp/pr/lab" : "=========================================",
@@ -399,144 +398,144 @@
 "injuries/suicide/intoxication/burn" : "=========================================",
     "FFH":"FFH",
     "RTA":"RTA",
-    "stab":"stab",
-    "shot":"shot",
-    "other injuries":"other injuries",
-    "intoxication":"intoxication",
-    "burn":"burn",
-    "msk injury":"msk injury",
-    "sport injury":"sport injury",
+    "stab":"Stab",
+    "shot":"Shot",
+    "other injuries":"Other injuries",
+    "intoxication":"Intoxication",
+    "burn":"Burn",
+    "msk injury":"Musculoskeletal injury",
+    "sport injury":"Sport injury",
 
 
 "mouth_region" : "=========================================",
-    "mouth deviation":"mouth deviation",
-    "cleft lip":"cleft lip",
-    "cleft palate":"cleft palate",
-    "disease of the mouth":"disease of the mouth",
+    "mouth deviation":"Mouth deviation",
+    "cleft lip":"Cleft lip",
+    "cleft palate":"Cleft palate",
+    "disease of the mouth":"Disease of the mouth",
 
 
 "appetite_regions" : "=========================================",
-    "weight gain":"weight gain",
-    "weight loss":"weight loss",
-    "anorexia":"anorexia",
-    "polyphagia":"polyphagia",
+    "weight gain":"Weight gain",
+    "weight loss":"Weight loss",
+    "anorexia":"Anorexia",
+    "polyphagia":"Polyphagia",
 
 "ENT_throat" : "=========================================",
-    "hoarseness":"hoarseness",
-    "sore throat":"sore throat",
-    "other ent problems":"other ENT problems",
+    "hoarseness":"Hoarseness",
+    "sore throat":"Sore throat",
+    "other ent problems":"Other ENT problems",
 
 
 "ENT_nose" : "=========================================",
-    "nasal discharge":"nasal discharge",
-    "nasal bleeding":"nasal bleeding",
-    "nasal obstruction":"nasal obstruction",
-    "nasal pain":"nasal pain",
-    "nasal mass":"nasal mass",
-    "nasal deformity":"nasal deformity",
-    "sneezing":"sneezing",
-    "nasal itching":"nasal itching",
-    "anosmia":"anosmia",
-    "enlarged nose":"enlarged nose",
+    "nasal discharge":"Nasal discharge",
+    "nasal bleeding":"Nasal bleeding",
+    "nasal obstruction":"Nasal obstruction",
+    "nasal pain":"Nasal pain",
+    "nasal mass":"Nasal mass",
+    "nasal deformity":"Nasal deformity",
+    "sneezing":"Sneezing",
+    "nasal itching":"Nasal itching",
+    "anosmia":"Anosmia",
+    "enlarged nose":"Enlarged nose",
 
 "ENT_ear" : "=========================================",
-    "deafness":"deafness",
-    "vertigo":"vertigo",
-    "tinnitus":"tinnitus",
-    "ear discharge":"ear discharge",
-    "ear redness":"ear redness",
-    "ear pain":"ear pain",
+    "deafness":"Deafness",
+    "vertigo":"Vertigo",
+    "tinnitus":"Tinnitus",
+    "ear discharge":"Ear discharge",
+    "ear redness":"Ear redness",
+    "ear pain":"Ear pain",
 
 "dermatology_skin" : "=========================================",
-    "dry skin":"dry skin",
-    "dry hair":"dry hair",
-    "skin rash":"skin rash",
-    "hair problems":"hair problems",
-    "skin redness":"skin redness",
-    "skin lesion":"skin lesion",
-    "skin appendage":"skin appendage",
-    "skin itching":"skin itching",
-    "acne":"acne",
-    "skin pigmentation":"skin pigmentation",
-    "other dermatological problems":"other skin problems",
-    "striae":"striae",
-    "nail problems":"nail problems",
-    "bruising":"bruising",
+    "dry skin":"Dry skin",
+    "dry hair":"Dry hair",
+    "skin rash":"Skin rash",
+    "hair problems":"Hair problems",
+    "skin redness":"Skin redness",
+    "skin lesion":"Skin lesion",
+    "skin appendage":"Skin appendage",
+    "skin itching":"Skin itching",
+    "acne":"Acne",
+    "skin pigmentation":"Skin pigmentation",
+    "other dermatological problems":"Other skin problems",
+    "striae":"Striae",
+    "nail problems":"Nail problems",
+    "bruising":"Bruising",
 
 
 "gyne" : "=========================================",
-    "amenorrhea":"amenorrhea",
-    "oligomenorrhea":"oligomenorrhea",
-    "menorrhagia":"menorrhagia",
-    "female infertility":"female infertility",
-    "female hirsutism":"female hirsutism",
-    "prolong pregnancy":"prolong pregnancy",
-    "abnormal cycle":"abnormal cycle",
-    "abnormal vaginal bleeding":"abnormal vaginal bleeding",
-    "vaginal discharge":"vaginal discharge",
-    "genital region mass":"genital region mass",
-    "pain during cycle":"pain during cycle",
-    "postmenopausal bleeding":"postmenopausal bleeding",
-    "other gynecological and obstetrical problems":"other gynecological and obstetrical problems",
-    "miscarriage":"miscarriage",
+    "amenorrhea":"Amenorrhea",
+    "oligomenorrhea":"Oligomenorrhea",
+    "menorrhagia":"Menorrhagia",
+    "female infertility":"Female infertility",
+    "female hirsutism":"Female hirsutism",
+    "prolong pregnancy":"Prolong pregnancy",
+    "abnormal cycle":"Abnormal cycle",
+    "abnormal vaginal bleeding":"Abnormal vaginal bleeding",
+    "vaginal discharge":"Vaginal discharge",
+    "genital region mass":"Genital region mass",
+    "pain during cycle":"Pain during cycle",
+    "postmenopausal bleeding":"Postmenopausal bleeding",
+    "other gynecological and obstetrical problems":"Other gynecological and obstetrical problems",
+    "miscarriage":"Miscarriage",
 
 "uro/kidney" : "=========================================",
-    "incontinence":"incontinence",
-    "polyuria":"polyuria",
-    "abnormal urethral opening site":"abnormal urethral opening site",
-    "suprapubic pain":"suprapubic pain",
-    "frequency":"frequency",
-    "flank pain":"flank pain",
-    "retention":"retention",
-    "urgency":"urgency",
-    "dysuria":"dysuria",
-    "hematuria":"hematuria",
-    "other urological problems":"other urological problems",
-    "nocturia":"nocturia",
+    "incontinence":"Incontinence",
+    "polyuria":"Polyuria",
+    "abnormal urethral opening site":"Abnormal urethral opening site",
+    "suprapubic pain":"Suprapubic pain",
+    "frequency":"Frequency",
+    "flank pain":"Flank pain",
+    "retention":"Retention",
+    "urgency":"Urgency",
+    "dysuria":"Dysuria",
+    "hematuria":"Hematuria",
+    "other urological problems":"Other urological problems",
+    "nocturia":"Nocturia",
 
 "male genital" : "=========================================",
-    "decrease libido":"decrease libido",
-    "delayed puberty":"delayed puberty",
-    "male infertility":"male infertility",
-    "scrotal swelling":"scrotal swelling",
-    "empty scrotum":"empty scrotum",
-    "abnormal penile size":"abnormal penile size",
-    "penile mass":"penile mass",
-    "other penile problems":"other penile problems",
-    "scrotal pain":"scrotal pain",
-    "priapism":"priapism",
-    "impotence":"impotence",
-    "hematospermia":"hematospermia",
+    "decrease libido":"Decrease libido",
+    "delayed puberty":"Delayed puberty",
+    "male infertility":"Male infertility",
+    "scrotal swelling":"Scrotal swelling",
+    "empty scrotum":"Empty scrotum",
+    "abnormal penile size":"Abnormal penile size",
+    "penile mass":"Penile mass",
+    "other penile problems":"Other penile problems",
+    "scrotal pain":"Scrotal pain",
+    "priapism":"Priapism",
+    "impotence":"Impotence",
+    "hematospermia":"Hematospermia",
 
 "ophtha" : "=========================================",
-    "open eye":"open eye",
-    "blindness":"blindness",
-    "photophobia":"photophobia",
-    "double vision":"double vision",
-    "lid drop":"lid drop",
-    "blurred vision":"blurred vision",
-    "squint":"squint",
-    "eye redness":"eye redness",
-    "eye pain":"eye pain",
-    "eye discharge":"eye discharge",
-    "eye itching":"eye itching",
-    "eye pigmentation":"eye pigmentation",
-    "periorbital edema":"periorbital edema",
-    "eyelid deformity":"eyelid deformity",
-    "dry eye":"dry eye",
-    "ophthalmoplegia":"ophthalmoplegia",
-    "other ophthalmological problems":"other eye problems",
-    "jaundice":"jaundice",
+    "open eye":"Open eye",
+    "blindness":"Blindness",
+    "photophobia":"Photophobia",
+    "double vision":"Double vision",
+    "lid drop":"Lid drop",
+    "blurred vision":"Blurred vision",
+    "squint":"Squint",
+    "eye redness":"Eye redness",
+    "eye pain":"Eye pain",
+    "eye discharge":"Eye discharge",
+    "eye itching":"Eye itching",
+    "eye pigmentation":"Eye pigmentation",
+    "periorbital edema":"Periorbital edema",
+    "eyelid deformity":"Eyelid deformity",
+    "dry eye":"Dry eye",
+    "ophthalmoplegia":"Ophthalmoplegia",
+    "other ophthalmological problems":"Other eye problems",
+    "jaundice":"Jaundice",
 
 "breast" : "=========================================",
-    "gynecomastia":"gynecomastia",
-    "galactorrhea":"galactorrhea",
-    "breast mass":"breast mass",
-    "breast pain":"breast pain",
-    "breast discharge":"breast discharge",
-    "breast lump":"breast lump",
-    "breast skin lesion":"breast skin lesion",
-    "other breast problems":"other breast problems"
+    "gynecomastia":"Gynecomastia",
+    "galactorrhea":"Galactorrhea",
+    "breast mass":"Breast mass",
+    "breast pain":"Breast pain",
+    "breast discharge":"Breast discharge",
+    "breast lump":"Breast lump",
+    "breast skin lesion":"Breast skin lesion",
+    "other breast problems":"Other breast problems"
 
 
 
