--- a/lang/en.json
+++ b/lang/en.json
@@ -128,7 +128,7 @@
     "passWord_reset":"Password Reset",
     "password_reset_email":"Send Email To Reset Password",
     "check_reset_email":"Check your Email and click on the link to Reset your Password",
-    "open_time":"Doctor is available from ",
+    "open_time":"Doctor is available",
     "expcetion_days" : "Days with other timing",
     "select_days" : "Select the day",
 
