--- a/lang/ar.json
+++ b/lang/ar.json
@@ -68,8 +68,13 @@
     "gender_message":"حدد الجنس لطفا",
     "complain_message":"اختر الشكوى الرئيسية لطفا",
     "geolocator_message":"قم بتشغيل خدمة الموقع ثم اضغط",
-
-
+    "dayselected":"تم اختيار هذا اليوم",
+    "selectmaindays":"اخترايام العمل لطفا",
+    "Select time":"حدداوقات العمل الرئيسية لطفا",
+    "choose 1st exceprion day":"حدد اليوم المستثنى الاول",
+    "choose 1st exception time":"حدد وفت العمل في اليوم المستثنى الاول",
+    "choose 2nd exception day":"حدد اليوم المستثنى الثاني",
+    "choose 2nd exception time":"حدد وفت العمل في اليوم المستثنى الثاني",
 
 "doctor_page" : "=======================================",
     "home_title" : "اهلا بك في كيورا",
