--- a/lang/ar.json
+++ b/lang/ar.json
@@ -37,6 +37,8 @@
     "saturday" : "السبت",
     "from" : "من ",
     "to" : "الى ",
+    "AM":"صباحا",
+    "PM":"مساءا",
 
 
 "email verification page":"=========================",
