profile Clinic Time

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -120,12 +120,12 @@
     "finish_update" : "اكمل تحديث معلوماتك بال",
     "change_password" : "هل تريد تغيير كلمة المرور؟",
     "change" : "تغيير",
-    "vacation":"عطلة العيادة في يوم",
+    "clinic_work":"دوام العيادة",
     "address" : "العنوان باللغه العربيه",
     "clinic_address" : "عنوان العياده",
     "detailed_address":"عنوان العيادة كاملا",
     "address_validator":"الرجاء ادخال عنوان مناسب",
-    "vacation_days":"ايام عطله العيادة",
+    "work_days":"ايام واوقات دوام العيادة",
     "vacation_validator":"لطفا حدد ايام عطلة العيادة",
     "work_hour":"اوقات عمل العيادة",
     "work_validator":"حدد اوقات عمل العيادة لطفا",
