--- a/lang/en.json
+++ b/lang/en.json
@@ -123,12 +123,12 @@
     "finish_update" : "Finish Updating your Information by ",
     "change_password" : "Change Your Password?",
     "change" : "Change",
-    "vacation":"Clinic vacation is in ",
+    "clinic_work":"Clinic work",
     "clinic_address" : "Clinic Address",
     "detailed_address":"Detailed clinic address",
     "address" : "Address in arabic",
     "address_validator":"Please enter a valid address",
-    "vacation_days":"Clinic Vacation days",
+    "work_days":"Clinic work days & Time",
     "vacation_validator":"Select valid vacation days",
     "work_hour":"Clinic working hours",
     "work_validator":"Please enter valid working hours",
