--- a/lang/en.json
+++ b/lang/en.json
@@ -6,6 +6,8 @@
     "search" :  "Search",
     "submit" : "Submit",
     "update" : "Update",
+    "language" : "Language",
+
     "ok" : "OK",
     "Ok":"OK",
     "google_map" : "Google Map",
