--- a/lang/ar.json
+++ b/lang/ar.json
@@ -7,6 +7,7 @@
     "search" :  "ابحث",
     "submit" : "تم",
     "update" : "Update",
+    "language" : "تغيير اللغه",
     "OK" : "تم",
     "ok":"تم",
     "google_map" : "خرائط كوكل",
