--- a/lang/ar.json
+++ b/lang/ar.json
@@ -15,7 +15,7 @@
     "":"",
 
 "regions":"---------------------------------",
-    "Baghdad":"بغداد",
+    "Baghdad":"بغداد , العراق",
     "Northern Region":"المنطقة الشمالية في العراق",
     "Southern Region":"المنطقة الجنوبية في العراق",
     "Western Region":"المنطقة الغربية في العراق",
@@ -123,7 +123,8 @@
     "finish_update" : "اكمل تحديث معلوماتك بال",
     "change_password" : "هل تريد تغيير كلمة المرور؟",
     "change" : "تغيير",
-    "clinic_work":"دوام العيادة",
+    "clinic_work":"اوقات دوام العياده",
+    "another_clinic_work" : "اوقات اخرى للدوام",
     "address" : "العنوان باللغه العربيه",
     "clinic_address" : "عنوان العياده",
     "detailed_address":"عنوان العيادة كاملا",
